주석과 로그추가